<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:paddingLeft="@dimen/dp20"
    android:paddingTop="@dimen/dp15"
    android:paddingRight="@dimen/dp20"
    android:paddingBottom="@dimen/dp20">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title_prompt"
        android:textColor="#333"
        android:textSize="@dimen/sp26" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/fl_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_below="@id/tv_dialog_title"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp20"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_io_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp20"

                    />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lv_io_list"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/bg_table_number"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:padding="@dimen/dp10" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_control_order"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp20"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10">

                <RadioGroup
                    android:id="@+id/rg_io_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_control_io_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:padding="8dp"
                        android:text="@string/text_control_io_state"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp22" />


                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp20"
                        android:padding="8dp"
                        android:text="@string/text_get_io_state"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp22" />


                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_output_or_input_setting"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp20"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10">

                <RadioGroup
                    android:id="@+id/rg_output_or_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_output"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:padding="8dp"
                        android:text="@string/text_output"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp22" />


                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp20"
                        android:padding="8dp"
                        android:text="@string/text_input"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp22" />


                </RadioGroup>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_level_setting"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp20"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10">

                <RadioGroup
                    android:id="@+id/rg_level_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_high_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:padding="8dp"
                        android:text="@string/text_high_level"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp22" />


                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp20"
                        android:padding="8dp"
                        android:text="@string/text_low_level"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp22" />


                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_get_io_data_setting"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp20"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10">

                <RadioGroup
                    android:id="@+id/rg_get_io_data_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_get_output_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:padding="8dp"
                        android:text="@string/text_output_data"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp22" />


                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp20"
                        android:padding="8dp"
                        android:text="@string/text_input_data"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp22" />


                </RadioGroup>


            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/fl_dialog_content"
            android:background="@drawable/bg_common_button_pressed"
            android:text="@string/text_confirm"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp22" />

</RelativeLayout>